ferric/tests/ui/syntax_err_02.stderr
error: expected let | use | observe | query
 --> tests/ui/syntax_err_02.rs:8:5
  |
8 |     + foo : bool ~ Bernoulli::new( 0.2 );
  |     ^
